--- a/companyFlatform/src/main/resources/application.properties
+++ b/companyFlatform/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8080
+
+spring.application.name=companyflatform
+spring.datasource.url=jdbc:mysql://ip:port/DB??serverTimezone=UTC
+spring.datasource.username=??
+spring.datasource.password=??
+
+# JPA ??
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto=create
+
+
+
+
+
+
 
