--- a/companyFlatform/src/main/resources/application.properties
+++ b/companyFlatform/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port=8080
 
 spring.application.name=companyflatform
-spring.datasource.url=jdbc:mysql://ip:port/DB??serverTimezone=UTC
-spring.datasource.username=??
-spring.datasource.password=??
+spring.datasource.url=jdbc:mysql://localhost:3306/companyplatform?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=qwer1234
 
-# JPA ??
+# JPA
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 
