--- a/companyFlatform/src/main/resources/application.properties
+++ b/companyFlatform/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8080
+server.error.include-exception=false
+server.error.include-message=always
+server.error.include-stacktrace=on_param
+server.error.whitelabel.enabled=true
 
 spring.application.name=companyflatform
 spring.datasource.url=jdbc:mysql://localhost:3306/companyplatform?serverTimezone=UTC
@@ -11,6 +15,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
+
 
 
 
