--- a/companyFlatform/src/main/resources/application.properties
+++ b/companyFlatform/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
 spring.application.name=companyflatform
-spring.datasource.url=jdbc:mysql://localhost:3306/DB명?serverTimezone=UTC
-spring.datasource.username=계정
-spring.datasource.password=암호
+spring.datasource.url=jdbc:mysql://localhost:3306/companyplatform?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=qwer1234
 
 # JPA
 spring.jpa.database=mysql
