--- a/companyFlatform/build.gradle
+++ b/companyFlatform/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation "io.springfox:springfox-swagger-ui:3.0.0"
 
+    implementation 'org.apache.commons:commons-lang3'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
